# airsql

./: .gitignore  Makefile  README.md  pyproject.toml  zensical.toml
.github/workflows/: build-and-publish.yml  ci.yml  docs.yml  release.yml
docs/: changelog.md  core-concepts.md  getting-started.md  index.md
docs/about/: index.md
docs/examples/: index.md
docs/reference/: core.md  decorators.md  index.md  operators.md  sensors.md  transfers.md
docs/usage/: index.md
docs/usage/query/: append.md  check.md  dataframe.md  ddl.md  extract-and-load.md  extract-and-merge.md  index.md  load-dataframe.md  merge-dataframe.md  merge.md  query.md  replace.md  truncate.md
docs/usage/sensors/: bigquery.md  index.md  postgres.md
docs/usage/transfers/: bigquery-to-postgres.md  gcs-to-postgres.md  index.md  postgres-to-bigquery.md  postgres-to-gcs.md
src/airsql/: __init__.py  decorators.py  enums.py  file.py  hooks.py  operators.py  table.py
src/airsql/sensors/: __init__.py  bigquery.py  postgres.py
src/airsql/transfers/: __init__.py  bigquery_postgres.py  gcs_postgres.py  postgres_bigquery.py  postgres_gcs.py
src/airsql/utils/: __init__.py  data_validator.py  operation_summary.py
tests/: conftest.py  test_bigquery_postgres.py  test_decorators.py  test_file.py  test_gcs_postgres.py  test_hooks.py  test_operators.py  test_postgres_bigquery.py  test_postgres_gcs.py  test_sensors.py
tests/fixtures/: data.py
tests/integration/: conftest.py  test_gcs_postgres_import.py  test_postgres_export.py
