[project]
name = "airsql"
version = "0.11.0"
description = "A decorator-based SQL execution framework for Airflow"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "1cadumagalhaes", email = "github@cadumagalhaes.dev" }]
maintainers = [{ name = "1cadumagalhaes", email = "github@cadumagalhaes.dev" }]
requires-python = ">=3.12"
keywords = ["airflow", "sql", "etl", "data-engineering", "bigquery", "postgres"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Apache Airflow",
]
dependencies = [
    "apache-airflow-providers-common-sql>=1.31.0",
    "apache-airflow-providers-postgres>=6.5.4",
    "apache-airflow-providers-google>=19.5.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "jinja2>=3.1.6",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",
    "db-dtypes>=1.4.4",
]


[dependency-groups]
dev = [
    "apache-airflow[google,standard]>=3.1.7",
    "mkdocstrings-python>=2.0.3",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.21",
    "pytest>=9.0.2",
    "ruff>=0.11.13",
    "testcontainers[postgres]>=4.14.1",
    "zensical>=0.0.24",
]

[project.urls]
Homepage = "https://github.com/1cadumagalhaes/airsql"
Repository = "https://github.com/1cadumagalhaes/airsql"
Issues = "https://github.com/1cadumagalhaes/airsql/issues"
Documentation = "https://github.com/1cadumagalhaes/airsql#readme"
Changelog = "https://github.com/1cadumagalhaes/airsql/releases"

[project.scripts]
airsql = "airsql:main"

[build-system]
requires = ["uv_build>=0.7.4,<0.8"]
build-backend = "uv_build"


[tool.pyright]
reportArgumentType = "none"
typeCheckingMode = "off"
reportOptionalIterable = false
reportAttributeAccessIssue = false
reportPossiblyUnboundVariable = false
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false
reportOperatorIssue = false
reportCallIssue = false
reportOptionalOperand = false
reportMissingImports = false
reportUnusedExpression = false
reportUnsupportedDunderAll = false
venv = ".venv"
exclude = [".venv"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".venv"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'C', 'B', 'ASYNC', "BLE", "S", "FAST"]
ignore = [
    'PLR0913',
    'PLR0917',
    'BLE001',
    'E501',
    'PLR1702',
    'PLR0915',
    'PLR0912',
    'PLR0914',
    'C901',
    'PLR0911',
    'PLC0415',
    'S608'
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "PLR6301",
    "S608",
    "PLR2004",
    "PLC0415",
    "PLC2701",
    "B903",
    "F841"
]
"tests/conftest.py" = ["F821"]

[tool.ruff.format]
preview = true
quote-style = 'single'
docstring-code-format = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    "ignore:pandas only supports SQLAlchemy connectable:UserWarning",
]
